Made the NAS CSV metadata extractor, and improved other parts of the code.